[gd_scene load_steps=4 format=3 uid="uid://2ognbohxj1g"]

[ext_resource type="Script" path="res://prog122c.gd" id="1_t4rqa"]

[sub_resource type="Theme" id="Theme_eq5n6"]
default_font_size = 32

[sub_resource type="Theme" id="Theme_r0qr6"]
default_font_size = 32

[node name="prog122c" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t4rqa")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 24.0
offset_right = 1110.0
offset_bottom = 466.0
theme = SubResource("Theme_eq5n6")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 506.0
offset_right = 225.0
offset_bottom = 601.0
theme = SubResource("Theme_r0qr6")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 457.0
offset_top = 506.0
offset_right = 647.0
offset_bottom = 601.0
theme = SubResource("Theme_r0qr6")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 917.0
offset_top = 506.0
offset_right = 1107.0
offset_bottom = 601.0
theme = SubResource("Theme_r0qr6")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
